# dev_machine

install/: local_setup.sh  setup.sh
install/my_package/share/my_package/: local_setup.sh  package.sh
install/my_package/share/my_package/launch/: talker.launch.py
install/nav2_demo/share/nav2_demo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nav2_demo/share/nav2_demo/config/: nav2_params.yaml  nav2_tweak3_params.yaml
install/nav2_demo/share/nav2_demo/launch/: navigation_launch.py
install/nav2_demo/share/nav2_demo/maps/: 170_map.pgm  demo3_map.pgm  demo3_map.yaml  demo4_map.pgm  demo4_map.yaml  demo_map.yaml  i.pgm  i.yaml
install/robot-bring-up-dev/lib/robot-bring-up-dev/: odom.py
install/robot-bring-up-dev/share/robot-bring-up-dev/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot-bring-up-dev/share/robot-bring-up-dev/cmake/: robot-bring-up-devConfig.cmake
install/robot-bring-up-dev/share/robot-bring-up-dev/config/: joystick.yaml
install/robot-bring-up-dev/share/robot-bring-up-dev/launch/: joystick.launch.py  localization_launch.py  odom.launch.py
install/robot-bring-up-dev/share/robot-bring-up-dev/maps/: 170_map.yaml  lab1_map.pgm  lab1_map.yaml
install/robot-slam-demo/share/robot-slam-demo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/nav2_demo/: CMakeLists.txt  package.xml
src/nav2_demo/config/: nav2_tweak2_params.yaml  nav2_tweak_params.yaml
src/nav2_demo/launch/: localization_launch.py
src/nav2_demo/maps/: abcd.pgm  abcd.yaml  abcde.pgm  abcde.yaml  b1_map.pgm  b1_map.yaml  c304.pgm  c304.yaml  demo2_map.pgm  demo2_map.yaml  demo_map.pgm  xyz.pgm  xyz.yaml
src/robot-bring-up-dev/: CMakeLists.txt
src/robot-bring-up-dev/config/: nav2_params.yaml
src/robot-bring-up-dev/launch/: navigation.launch.py  rviz2.launch.py
src/robot-bring-up-dev/rviz/: robot3.rviz
src/robot-slam-demo/: CMakeLists.txt
src/robot-slam-demo/config/: jetson_robot_lds_2d.lua
src/robot-slam-demo/launch/: occupancy_grid.launch.py
(+4 files in other folders)
